# connect-four

./: LICENSE  connect-four.cabal  stack.yaml
src/: Game.hs  Main.hs  Move.hs  Player.hs  Stone.hs
