name:                connect-four
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/fendor/connect-four
license:             BSD3
license-file:        LICENSE
author:              Hannes Siebenhandl
maintainer:          e1327006@student.tuwien.ac.at
copyright:           2016 Hannes Siebenhandl
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable connect-four
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010     
  build-depends:       base >= 4.7 && < 5, time, matrix
  ghc-options:         -Wall 

